grafana-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: grafana
  name: grafana
  namespace: monitoring
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: grafana
      name: grafana
      namespace: monitoring
    spec:
      containers:
      - name: grafana
        image: grafana/grafana:5.0.3
        ports:
        - containerPort: 3000
          name: grafana
          protocol: TCP
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        volumeMounts:
        - mountPath: /var/lib/grafana
          name: grafana-data
      volumes:
      - name: "grafana-data"
        persistentVolumeClaim:
          claimName: grafana-data
