grafana-service.yml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring
spec:
  ports:
  - name: grafana
    port: 3000
    protocol: TCP
    targetPort: grafana
  selector:
    app: grafana
