grafana-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/auth-signin: https://$host/oauth2/sign_in
    ingress.kubernetes.io/auth-url: https://$host/oauth2/auth
    ingress.kubernetes.io/ssl-redirect: "true"
  name: grafana 
  namespace: monitoring
spec:
  rules:
  - host: GRAFANA.EXAMPLE.ORG
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 3000
  tls:
  - secretName: GRAFANA.EXAMPLE.ORG
    hosts:
      - GRAFANA.EXAMPLE.ORG
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: oauth-grafana
  namespace: default
spec:
  rules:
  - host: GRAFANA.EXAMPLE.ORG
    http:
      paths:
      - backend:
          serviceName: oauth
          servicePort: 4180
        path: /oauth2
  tls:
  - secretName: GRAFANA.EXAMPLE.ORG
    hosts:
      - GRAFANA.EXAMPLE.ORG
